--- a/SAF.Web.Intranet/Web.config
+++ b/SAF.Web.Intranet/Web.config
@@ -11,7 +11,9 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-SAF.Web.Intranet-20150905063702.mdf;Initial Catalog=aspnet-SAF.Web.Intranet-20150905063702;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!--<add name="SI_SOCAUDEntities" connectionString="metadata=res://*/modeloIntranet.csdl|res://*/modeloIntranet.ssdl|res://*/modeloIntranet.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SI_SOCAUD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="SI_SOCAUDEntities" connectionString="metadata=res://*/modeloIntranet.csdl|res://*/modeloIntranet.ssdl|res://*/modeloIntranet.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.20.3.234;initial catalog=SI_SOCAUD; Uid=sa; Pwd=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="SI_SOCAUDEntities" connectionString="metadata=res://*/modeloIntranet.csdl|res://*/modeloIntranet.ssdl|res://*/modeloIntranet.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.20.3.234;initial catalog=SI_SOCAUD; Uid=sa; Pwd=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--produccion-->
+    <add name="SI_SOCAUDEntities" connectionString="metadata=res://*/modeloIntranet.csdl|res://*/modeloIntranet.ssdl|res://*/modeloIntranet.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=dbacademia.cyhmdhuqkann.us-east-1.rds.amazonaws.com;initial catalog=SI_SOCAUD; Uid=sa; Pwd=Pass_2003;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
