--- a/SAF.Web/Web.config
+++ b/SAF.Web/Web.config
@@ -77,7 +77,7 @@
     </bindings>
     <client>
       
-      <!--<endpoint address="http://localhost:33694/ServicioGestionSoaAuditor.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IGestionSociedadAuditorLogic" contract="ProxyServicioGestionSoaAuditor.IGestionSociedadAuditorLogic" name="WSHttpBinding_IGestionSociedadAuditorLogic">
+      <endpoint address="http://localhost:33694/ServicioGestionSoaAuditor.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IGestionSociedadAuditorLogic" contract="ProxyServicioGestionSoaAuditor.IGestionSociedadAuditorLogic" name="WSHttpBinding_IGestionSociedadAuditorLogic">
         <identity>
           <userPrincipalName value="LuisCordova-PC\LuisCordova" />
         </identity>
@@ -87,10 +87,10 @@
         <identity>
           <userPrincipalName value="LuisCordova-PC\LuisCordova" />
         </identity>
-      </endpoint>-->
+      </endpoint>
       
 
-      <endpoint address="http://10.20.3.234/SAF_SOA/ServicioGestionSoaAuditor.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IGestionSociedadAuditorLogic" contract="ProxyServicioGestionSoaAuditor.IGestionSociedadAuditorLogic" name="WSHttpBinding_IGestionSociedadAuditorLogic">
+      <!--<endpoint address="http://10.20.3.234/SAF_SOA/ServicioGestionSoaAuditor.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IGestionSociedadAuditorLogic" contract="ProxyServicioGestionSoaAuditor.IGestionSociedadAuditorLogic" name="WSHttpBinding_IGestionSociedadAuditorLogic">
         <identity>
           <userPrincipalName value="LuisCordova-PC\LuisCordova" />
         </identity>
@@ -100,13 +100,15 @@
         <identity>
           <userPrincipalName value="LuisCordova-PC\LuisCordova" />
         </identity>
-      </endpoint>
+      </endpoint>-->
       
       
     </client>
   </system.serviceModel>
   <connectionStrings>
     <!--<add name="ModeloExtranet" connectionString="metadata=res://*/modeloExtranet.csdl|res://*/modeloExtranet.ssdl|res://*/modeloExtranet.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SI_SOCAUD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="ModeloExtranet" connectionString="metadata=res://*/modeloExtranet.csdl|res://*/modeloExtranet.ssdl|res://*/modeloExtranet.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.20.3.234;initial catalog=SI_SOCAUD;Uid=sa;Pwd=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="ModeloExtranet" connectionString="metadata=res://*/modeloExtranet.csdl|res://*/modeloExtranet.ssdl|res://*/modeloExtranet.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.20.3.234;initial catalog=SI_SOCAUD;Uid=sa;Pwd=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--produccion-->
+    <add name="ModeloExtranet" connectionString="metadata=res://*/modeloExtranet.csdl|res://*/modeloExtranet.ssdl|res://*/modeloExtranet.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=dbacademia.cyhmdhuqkann.us-east-1.rds.amazonaws.com;initial catalog=SI_SOCAUD;Uid=sa;Pwd=Pass_2003;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
