--- a/SAF.Web.Intranet/SAF.Web.Intranet.csproj
+++ b/SAF.Web.Intranet/SAF.Web.Intranet.csproj
@@ -40,9 +40,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Microsoft.ReportViewer.WebForms, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+    <Reference Include="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Microsoft.ReportViewer.WebForms.DLL</HintPath>
+      <HintPath>Dll\Microsoft.ReportViewer.WebForms.DLL</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -414,6 +414,7 @@
     <Content Include="Content\skin-blue.css" />
     <Content Include="Content\skin-blue.min.css" />
     <Content Include="Content\_all-skins.min.css" />
+    <Content Include="Dll\Microsoft.ReportViewer.WebForms.DLL" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -557,7 +558,9 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\sample.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
