--- a/SAF.Web/Web.config
+++ b/SAF.Web/Web.config
@@ -90,17 +90,17 @@
       </endpoint>
       
 
-      <!--<endpoint address="http://10.20.3.234/SAF_SOA/ServicioGestionSoaAuditor.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IGestionSociedadAuditorLogic" contract="ProxyServicioGestionSoaAuditor.IGestionSociedadAuditorLogic" name="WSHttpBinding_IGestionSociedadAuditorLogic">
+       <!--<endpoint address="http://ec2-52-23-157-155.compute-1.amazonaws.com/SAFSOA/ServicioGestionSoaAuditor.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IGestionSociedadAuditorLogic" contract="ProxyServicioGestionSoaAuditor.IGestionSociedadAuditorLogic" name="WSHttpBinding_IGestionSociedadAuditorLogic">
         <identity>
           <userPrincipalName value="LuisCordova-PC\LuisCordova" />
         </identity>
       </endpoint>
 
-      <endpoint address="http://10.20.3.234/SAF_SOA/ServicioSeguridad.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ISeguridadLogic" contract="ProxyServicioSeguridad.ISeguridadLogic" name="WSHttpBinding_ISeguridadLogic">
+      <endpoint address="http://ec2-52-23-157-155.compute-1.amazonaws.com/SAFSOA/ServicioSeguridad.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ISeguridadLogic" contract="ProxyServicioSeguridad.ISeguridadLogic" name="WSHttpBinding_ISeguridadLogic">
         <identity>
           <userPrincipalName value="LuisCordova-PC\LuisCordova" />
         </identity>
-      </endpoint>-->
+      </endpoint>--> 
       
       
     </client>
