--- a/SAF.Servicio.HostSoap/Web.config
+++ b/SAF.Servicio.HostSoap/Web.config
@@ -10,10 +10,10 @@
   </system.web>
 
   <connectionStrings>
-    <!--<add name="SI_SOCAUDEntities" connectionString="metadata=res://*/SAFModel.csdl|res://*/SAFModel.ssdl|res://*/SAFModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SI_SOCAUD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="SI_SOCAUDEntities" connectionString="metadata=res://*/SAFModel.csdl|res://*/SAFModel.ssdl|res://*/SAFModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SI_SOCAUD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--<add name="SI_SOCAUDEntities" connectionString="metadata=res://*/SAFModel.csdl|res://*/SAFModel.ssdl|res://*/SAFModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.20.3.234;initial catalog=SI_SOCAUD;Uid=sa;Pwd=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--prod-->
-    <add name="SI_SOCAUDEntities" connectionString="metadata=res://*/SAFModel.csdl|res://*/SAFModel.ssdl|res://*/SAFModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=dbacademia.cyhmdhuqkann.us-east-1.rds.amazonaws.com;initial catalog=SI_SOCAUD;Uid=sa;Pwd=Pass_2003;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="SI_SOCAUDEntities" connectionString="metadata=res://*/SAFModel.csdl|res://*/SAFModel.ssdl|res://*/SAFModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=dbacademia.cyhmdhuqkann.us-east-1.rds.amazonaws.com;initial catalog=SI_SOCAUD;Uid=sa;Pwd=Pass_2003;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
 
   <system.serviceModel>
